# ani-l

./: Cargo.toml  DISCLAIMER.md  README.md  TODO.md
.github/workflows/: ci.yml
locales/: en.yml  es.yml  fr.yml  id.yml  pt.yml  ru.yml
src/: api.rs  config.rs  main.rs  models.rs  normalizer.rs  registry.rs
src/player/: mod.rs  mpv.rs  traits.rs
src/provider/: allanime.rs  mod.rs  models.rs
src/tui/: app.rs  events.rs  ui.rs
