[package]
name = "ani-l"
version = "0.2.4"
authors = ["Albert Medrano-Lopez"]
edition = "2024"
description = "A terminal-based anime library and streamer."
repository = "https://github.com/komposer-aml/ani-l"
homepage = "https://github.com/komposer-aml/ani-l"
keywords = ["anime", "tui", "terminal", "streamer"]
categories = ["command-line-utilities", "multimedia::video"]
license = "LGPL-2.1-only"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
open = "4.0"
urlencoding = "2.1"
toml = "0.8"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
ratatui = "0.26"
strsim="0.10"
log = "0.4"
env_logger = "0.11"