[package]
name = "ani-l"
version = "0.3.5"
authors = ["Albert Medrano-Lopez"]
edition = "2024"
description = "A terminal-based anime library and streamer."
repository = "https://github.com/komposer-aml/ani-l"
homepage = "https://github.com/komposer-aml/ani-l"
keywords = ["anime", "tui", "terminal", "streamer"]
categories = ["command-line-utilities", "multimedia::video"]
license = "LGPL-2.1-only"
readme = "README.md"
include = [
    "src/**/*",
    "locales/**/*",
    "LICENSE",
    "README.md",
    "DISCLAIMER.md"
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
open = "5.0"
urlencoding = "2.1"
toml = "0.8"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
ratatui = "0.30"
strsim="0.11"
log = "0.4"
env_logger = "0.11"
rust-i18n = "3.0"
lazy_static = "1.4"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm"] }
image = "0.25"